--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
+  "browserslist": [
+    ">0.3%",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@next/bundle-analyzer": "^15.5.0",
     "framer-motion": "^11.0.8",
     "next": "^14.2.32",
     "react": "^18",
@@ -22,6 +29,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "lighthouse": "^12.8.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
